--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
 	<div class="info">
-		<h3 class="domain">lber.com</h3>
+		<h3 class="domain">Lber.com</h3>
 		<p class="tips">for sale!</p>
 		<p class="contact"><a data-href="mailto:ctforcp@163.com">ctforcp@163.com</a></p>
 	</div>
