--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lber.com</title>
+	<meta name="keywords" content="www.lber.com" />
+	<meta name="description" content="www.lber.com" />
 	<style>
 		* {
 			margin: 0;
@@ -49,7 +51,7 @@
 	<div class="info">
 		<h3 class="domain">Lber.com</h3>
 		<p class="tips">for sale!</p>
-		<p class="contact"><a data-href="mailto:ctforcp@163.com">ctforcp@163.com</a></p>
+		<p class="contact"><a data-href="mailto:243049113@qq.com">243049113@qq.com</a></p>
 	</div>
 </body>
 </html>
