--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	<div class="info">
 		<h3 class="domain">Lber.com</h3>
 		<p class="tips">for sale!</p>
-		<p class="contact"><a data-href="mailto:243049113@qq.com">243049113@qq.com</a></p>
+		<p class="contact">Email: <a data-href="mailto:243049113@qq.com">243049113@qq.com</a></p>
 	</div>
 </body>
 </html>
